Was off centre.  Fixed.

--- a/greatbigcrane/media/css/master.css
+++ b/greatbigcrane/media/css/master.css
@@ -372,7 +372,7 @@ ul.tests .notification {
 
 ul.tests .notification .dismiss {
   position: absolute;
-  top: 7px;
+  top: 8px;
   right: 5px;
   overflow: hidden;
   text-indent: -999em;
@@ -410,18 +410,18 @@ ul.tests li a.result {
 ul.tests li a.result:hover {
   padding: 9px 24px 9px 39px;
   border: 1px solid #666 !important;
-  background-position: 9px center !important;
+  background-position: 9px 8px !important;
 }
 
 ul.tests li.success a.result {
   color: #9de983;
-  background: #121212 url(../images/small-icon-pass.png) 10px 7px no-repeat;
+  background: #121212 url(../images/small-icon-pass.png) 10px 8px no-repeat;
   border-color: #121212;
 }
 
 ul.tests li.error a.result {
   color: #a9a9a9;
-  background: #4f2020 url(../images/small-icon-fail.png) 10px 7px no-repeat;
+  background: #4f2020 url(../images/small-icon-fail.png) 10px 8px no-repeat;
   border-color: #4f2020;
 }
 
